change hardcoded users to db fetch users

--- a/BSGWebAPI/appsettings.json
+++ b/BSGWebAPI/appsettings.json
@@ -18,6 +18,6 @@
     "ValidateLifetime": false
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=STP-NB2160\\SQLEXPRESS;Initial Catalog=BSGTesting;User ID=sa;Password=admin"
+    "DefaultConnection": "Data Source=SIJULI87\\SQL2019;Initial Catalog=BSGWebAPI;User ID=sa;Password=admin123"
   }
 }
